# altius-code

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/altius-agents/: Cargo.toml
crates/altius-agents/src/: error.rs  evidence.rs  fs_tools.rs  guardrails.rs  hooks.rs  learning.rs  lib.rs  llm.rs  permissions.rs  project_memory.rs  prompts.rs  roles.rs  routing.rs  skills.rs  supervisor.rs  tools.rs
crates/altius-cli/: Cargo.toml
crates/altius-cli/assets/pwa/: 404.html  app.js  beeacp-client.js  design-system.css  index.html  manifest.webmanifest  sw.js
crates/altius-cli/assets/pwa-next/: .env.example  next.config.ts  package.json  pnpm-lock.yaml
crates/altius-cli/assets/pwa-next/.next/: BUILD_ID  app-build-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
crates/altius-cli/assets/pwa-next/.next/cache/: .rscinfo  .tsbuildinfo
crates/altius-cli/assets/pwa-next/.next/server/: middleware-build-manifest.js  server-reference-manifest.json
crates/altius-cli/assets/pwa-next/.next/server/app/: _not-found.html  _not-found.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
crates/altius-cli/assets/pwa-next/.next/server/chunks/: 687.js
crates/altius-cli/assets/pwa-next/.next/server/pages/: 404.html  500.html  _app.js.nft.json  _document.js.nft.json
crates/altius-cli/assets/pwa-next/.next/static/EreOprMtsh4UuWIfuF13t/: _buildManifest.js
crates/altius-cli/assets/pwa-next/.next/static/chunks/: 767-ce74252fa513391b.js  main-3d4c38f8813162fb.js  webpack-a5066fca5ea53aa6.js
crates/altius-cli/assets/pwa-next/.next/types/app/: layout.ts  page.ts
crates/altius-cli/assets/pwa-next/public/: manifest.webmanifest
crates/altius-cli/assets/pwa-next/src/app/: globals.css  layout.tsx  page.tsx
crates/altius-cli/assets/pwa-next/src/components/: chat-panel.tsx  status-bar.tsx  task-input.tsx  task-sidebar.tsx
crates/altius-cli/assets/pwa-next/src/lib/: acp-client.ts  types.ts  utils.ts
crates/altius-cli/assets/pwa/styles/: base.css  main.css  tokens.css
crates/altius-cli/assets/pwa/styles/components/: badge.css  button.css  card.css  composer.css  detail.css  history.css  input.css  layout.css  list-row.css  nav.css  topbar.css
crates/altius-cli/src/: acp_command.rs  cli.rs  deploy_command.rs  detect_command.rs  error.rs  eval_command.rs  fleet_command.rs  github_connector.rs  main.rs  plugin.rs  rpc_endpoint.rs  scan_command.rs  serve_command.rs  terminal_approval.rs  toolchain_for.rs  tui.rs
crates/altius-cli/src/tui/: app.rs  dispatcher.rs  ui.rs
crates/altius-core/: Cargo.toml
crates/altius-core/src/: budget.rs  error.rs  ids.rs  lib.rs  redact.rs
crates/altius-detect/: Cargo.toml
crates/altius-detect/src/: chains.rs  error.rs  lib.rs  plugin.rs  registry.rs  svm.rs
crates/altius-eval/: Cargo.toml  PROVENANCE.md
crates/altius-eval/fixtures/svm/clean_checked/: Cargo.toml
crates/altius-eval/fixtures/svm/clean_checked/src/: lib.rs
crates/altius-eval/fixtures/svm/vulnerable_cross_file/: Cargo.toml
crates/altius-eval/fixtures/svm/vulnerable_cross_file/src/: authority.rs  close.rs  cpi.rs  lib.rs
crates/altius-eval/src/: gold.rs  lib.rs  report.rs  score.rs
crates/altius-findings/: Cargo.toml
crates/altius-findings/src/: chain.rs  finding.rs  fingerprint.rs  lib.rs  report.rs  sarif.rs  severity.rs
crates/altius-fleet/: Cargo.toml
crates/altius-fleet/src/: agents.rs  error.rs  fleet.rs  lib.rs  state.rs  testing.rs  tools.rs
crates/altius-graph/: Cargo.toml
crates/altius-graph/src/: checkpointer.rs  error.rs  executor.rs  graph.rs  lib.rs  memory.rs  node.rs  sqlite_memory.rs  state.rs
crates/altius-graph/tests/: golden_path.rs  neo4j_memory.rs
crates/altius-mcp/: Cargo.toml
crates/altius-mcp/src/: agent_lsp.rs  lib.rs  mcp_client.rs  server.rs
crates/altius-memory/: Cargo.toml
crates/altius-memory/src/: lib.rs  neo4j.rs  schema.rs  security.rs  store.rs  trajectory.rs
crates/altius-memory/tests/: neo4j_integration.rs
crates/altius-ontology/: Cargo.toml
crates/altius-ontology/src/: client.rs  lib.rs  mcp.rs  schema.rs
crates/altius-payments/: Cargo.toml
crates/altius-payments/src/: challenge.rs  error.rs  lib.rs  settle.rs
crates/altius-protocol/: Cargo.toml
crates/altius-protocol/src/: error.rs  lib.rs  limits.rs
crates/altius-protocol/src/a2a/: mod.rs  model.rs  routes.rs
crates/altius-protocol/src/anp/: description.rs  did.rs  mod.rs  registry.rs  routes.rs
crates/altius-protocol/src/beeacp/: auth.rs  mod.rs  model.rs  openapi.rs  routes.rs  sqlite_store.rs  store.rs
crates/altius-protocol/src/editor_acp/: codec.rs  methods.rs  mod.rs
crates/altius-scanners/: Cargo.toml
crates/altius-scanners/src/: algorand.rs  cairo.rs  cosmos.rs  error.rs  evm.rs  lib.rs  registry.rs  scanner.rs  svm.rs  ton.rs  util.rs
crates/altius-signer/: Cargo.toml
crates/altius-signer/src/: client.rs  error.rs  keys.rs  lib.rs  protocol.rs  redaction.rs  server.rs  transport.rs
crates/altius-signer/src/backend/: keypair_file.rs  mod.rs
crates/altius-svm-tools/: Cargo.toml
crates/altius-svm-tools/src/: anchor.rs  deploy_plan.rs  error.rs  lib.rs  native.rs  report.rs  shell.rs  shortcut_guard.rs  toolchain_trait.rs
crates/altius-svm-tools/src/adapters/: cargo_audit.rs  clippy.rs  mod.rs
crates/altius-svm-tools/src/dynamic/: mod.rs
crates/altius-svm-tools/src/lints/: mod.rs  rules.rs  span.rs
crates/altius-txguard/: Cargo.toml
crates/altius-txguard/src/: approval.rs  audit_log.rs  diff.rs  error.rs  known_programs.rs  lib.rs  pipeline.rs  policy.rs  rpc_simulator.rs  simulate.rs  test_validator.rs  testing.rs  tx_assembly.rs  tx_request.rs
crates/altius-txguard/tests/: pipeline.rs
crates/altius-wasm-agents/: Cargo.toml
crates/altius-wasm-agents/src/: lib.rs
docs/: MOAT_RESEARCH_ADDENDUM.md  (+3 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: protocol_json_limits.rs  wasm_guest_abi_decoder.rs
(+62 files in other folders)
