[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/daemon-blockint-tech/altius-code"

[workspace.dependencies]
altius-svm-detect = { path = "crates/altius-svm-detect" }
altius-svm-tools = { path = "crates/altius-svm-tools" }
altius-txguard = { path = "crates/altius-txguard" }
altius-signer = { path = "crates/altius-signer" }
altius-fleet = { path = "crates/altius-fleet" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
