[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/daemon-blockint-tech/altius-code"

[workspace.dependencies]
altius-core = { path = "crates/altius-core" }
altius-graph = { path = "crates/altius-graph" }
altius-agents = { path = "crates/altius-agents" }
altius-mcp = { path = "crates/altius-mcp" }
altius-protocol = { path = "crates/altius-protocol" }
altius-payments = { path = "crates/altius-payments" }
altius-memory = { path = "crates/altius-memory" }
altius-ontology = { path = "crates/altius-ontology" }
altius-wasm-agents = { path = "crates/altius-wasm-agents" }
altius-svm-detect = { path = "crates/altius-svm-detect" }
altius-svm-tools = { path = "crates/altius-svm-tools" }
altius-txguard = { path = "crates/altius-txguard" }
altius-signer = { path = "crates/altius-signer" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
regex = "1"
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
neo4rs = "0.9.0-rc.10"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
base64 = "0.22"
url = "2"
