[package]
name = "altius-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
altius-protocol = { path = "../crates/altius-protocol" }
altius-wasm-agents = { path = "../crates/altius-wasm-agents" }
libfuzzer-sys = "0.4"
serde_json = "1"

[[bin]]
name = "wasm_guest_abi_decoder"
path = "fuzz_targets/wasm_guest_abi_decoder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "protocol_json_limits"
path = "fuzz_targets/protocol_json_limits.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
