[package]
name = "altius-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Altius fleet agent roles, LLM client trait, and supervisor graph"

[dependencies]
altius-core = { workspace = true }
altius-graph = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
