[package]
name = "altius-agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Altius fleet agent roles, LLM client trait, and supervisor graph"

[dependencies]
altius-core = { workspace = true }
altius-detect = { workspace = true }
altius-findings = { workspace = true }
altius-graph = { workspace = true }
altius-mcp = { workspace = true, features = ["mcp-client"] }
altius-scanners = { workspace = true, features = ["all-chains"] }
altius-svm-detect = { workspace = true }
altius-svm-tools = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
