[package]
name = "altius-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "altius"
path = "src/main.rs"

[dependencies]
altius-core = { workspace = true }
altius-agents = { workspace = true }
altius-detect = { workspace = true }
altius-eval = { workspace = true }
altius-findings = { workspace = true }
altius-mcp = { workspace = true, features = ["mcp-client"] }
altius-protocol = { workspace = true }
altius-scanners = { workspace = true, features = ["all-chains"] }
tower-http = { workspace = true }
altius-svm-detect = { workspace = true }
altius-svm-tools = { workspace = true }
altius-txguard = { workspace = true }
altius-signer = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
solana-pubkey = "4.2.0"
solana-rpc-client = "4.1.2"

[dev-dependencies]
tempfile = { workspace = true }
