[package]
name = "altius-findings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Canonical multi-chain security finding and scan-report models"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
