[package]
name = "altius-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
altius-svm-detect = { workspace = true }
altius-svm-tools = { workspace = true }
altius-txguard = { workspace = true }
rust-langgraph = { version = "0.1.1", features = ["openrouter", "prebuilt"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
solana-hash = "4.5.0"
solana-pubkey = "4.2.0"

[dev-dependencies]
tempfile = { workspace = true }
