[package]
name = "altius-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Altius Model Context Protocol host and external MCP client"

[features]
default = []
agent-lsp = ["rmcp/client", "rmcp/transport-child-process"]

[dependencies]
altius-core = { workspace = true }
altius-svm-detect = { workspace = true }
altius-svm-tools = { workspace = true }
axum = { workspace = true }
rmcp = { version = "2.2", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
