[package]
name = "altius-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Altius Model Context Protocol host and external MCP client"

[features]
default = []
# Generic MCP client attach (browser, ontology, …).
mcp-client = ["rmcp/client", "rmcp/transport-child-process"]
# Backward-compatible alias that also exposes the agent-lsp shim.
agent-lsp = ["mcp-client"]

[dependencies]
altius-core = { workspace = true }
altius-detect = { workspace = true }
altius-findings = { workspace = true }
altius-scanners = { workspace = true, features = ["all-chains"] }
altius-svm-detect = { workspace = true }
altius-svm-tools = { workspace = true }
axum = { workspace = true }
rmcp = { version = "2.2", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
