[package]
name = "altius-payments"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "x402 / machine-payment challenge handling for the Altius fleet: parse HTTP 402 challenges, build TxKind::Payment requests, and settle them exclusively through TxGuard"

[dependencies]
altius-svm-detect = { workspace = true }
altius-txguard = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
bincode = "1"
solana-hash = "4.5.0"
solana-message = "4.3.0"
solana-pubkey = "4.2.0"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
solana-transaction = "4.1.5"

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
