[package]
name = "altius-scanners"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Feature-gated native multi-chain security scanners for Altius"

[features]
default = ["svm"]
svm = ["dep:altius-svm-tools", "dep:altius-svm-detect"]
evm = []
algorand = []
cairo = []
cosmos = []
ton = []
all-chains = ["svm", "evm", "algorand", "cairo", "cosmos", "ton"]

[dependencies]
altius-findings = { workspace = true }
altius-detect = { workspace = true }
altius-svm-tools = { workspace = true, optional = true }
altius-svm-detect = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
