[package]
name = "altius-signer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bs58 = "0.5.1"
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
rand = "0.10.2"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rand_core = "0.10.1"
tempfile = { workspace = true }

[[bin]]
name = "altius-signerd"
path = "src/bin/altius_signerd.rs"
