[package]
name = "altius-svm-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
altius-findings = { workspace = true }
altius-svm-detect = { workspace = true }
altius-txguard = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
solana-loader-v3-interface = { version = "8.0.1", features = ["wincode"] }
solana-system-interface = "3.2.0"
solana-pubkey = "4.2.0"
solana-instruction = "3.4.0"
solana-message = "4.3.0"
solana-keypair = "3.1.2"
solana-signer = "3.0.1"
solana-signature = "3.4.1"
solana-rent = "4.3.0"
solana-hash = "4.5.0"

[dev-dependencies]
tempfile = { workspace = true }
