[package]
name = "altius-txguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
altius-svm-detect = { workspace = true }
altius-signer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
ed25519-dalek = "3.0.0"
rand = "0.10.2"
rand_core = "0.10.1"
tempfile = { workspace = true }
