[package]
name = "altius-txguard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
altius-svm-detect = { workspace = true }
altius-signer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
solana-pubkey = "4.2.0"
solana-signature = "3.4.1"
solana-hash = "4.5.0"
solana-instruction = "3.4.0"
solana-message = "4.3.0"
solana-transaction = "4.1.5"
solana-client = "4.1.2"
solana-rpc-client = "4.1.2"
solana-rpc-client-api = "4.1.2"
tempfile = { workspace = true }

[dev-dependencies]
ed25519-dalek = "3.0.0"
rand = "0.10.2"
rand_core = "0.10.1"
